# libcqp

./: CMakeLists.txt  Makefile.am  README.md  configure.ac  libcqp.pc.in
libcqp/: cqp.h
src/: Makefile.am  cqp.c  cqp_core.h  cqp_preproc.h
